<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="android.sdei.com.basicapp.ui.forgotpassword.ForgotPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_10"
            android:layout_marginStart="@dimen/space_10"
            android:layout_marginTop="@dimen/space_25"
            android:gravity="center"
            android:text="@string/forgot_password_text"
            android:textSize="@dimen/text_size_18"
             />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_10"
            android:layout_marginStart="@dimen/space_10"
            android:layout_marginTop="@dimen/space_20"
            app:errorText="@{viewModel.emailError}"
            android:hint="@string/email">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text="@={viewModel.email}"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_10"
            android:layout_marginStart="@dimen/space_10"
            android:layout_marginTop="@dimen/space_20"
           >
        <Button
            android:id="@+id/resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/reset_password"
            android:textSize="@dimen/text_size_16"
            android:textColor="@android:color/black"/>


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/space_25"
                android:layout_height="@dimen/space_25"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/space_10"
                android:indeterminate="true"
                android:visibility="invisible"
                android:theme="@style/WhiteProgressBarStyle" />
        </RelativeLayout>

    </LinearLayout>
</layout>