<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="android.sdei.com.basicapp.ui.register.RegisterViewModal" />
    </data>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:theme="@style/toolbar_theme"
                android:layout_width="match_parent"
                app:navigationIcon="@drawable/ic_action_name"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/register"
                android:background="?attr/colorPrimary"
                />
        <android.support.v4.widget.NestedScrollView
                android:id="@+id/scrollView"
               android:layout_below="@+id/toolbar"
               android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:id="@+id/fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_10"
                    android:layout_marginRight="@dimen/space_10"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/firstNameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_15"
                        app:errorText="@{viewModel.firstNameError}"
                        app:textChangeListener="@{true}"
                        app:errorTextAppearance="@style/error_appearance"
                        android:hint="@string/first_name">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={viewModel.firstName}"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/lastNameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_7"
                        app:errorText="@{viewModel.lastNameError}"
                        app:textChangeListener="@{true}"
                        app:errorTextAppearance="@style/error_appearance"
                        android:hint="@string/last_name">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={viewModel.lastName}"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/emailLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_7"
                        app:errorText="@{viewModel.emailError}"
                        app:textChangeListener="@{true}"
                        app:errorTextAppearance="@style/error_appearance"
                        android:hint="@string/email">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:text="@={viewModel.email}"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>



                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/passwordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_7"
                        android:hint="@string/password"
                        app:errorText="@{viewModel.passwordError}"
                        app:errorTextAppearance="@style/error_appearance"
                        app:passwordChangeListener="@{true}"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:text="@={viewModel.password}"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/verifyPasswordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorText="@{viewModel.errorVerifyPassword}"
                        app:errorTextAppearance="@style/error_appearance"
                        app:textChangeListener="@{true}"
                        android:layout_marginTop="@dimen/space_7">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/verify_password"
                            android:inputType="textPassword"
                            android:text="@={viewModel.verifyPassword}"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_7"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/termsConditionsCheck"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="@={viewModel.isTermCondition}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/space_4"
                            android:text="I accept"
                            android:textColor="@color/colorDarkGray"
                            android:textSize="@dimen/text_size_18" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/space_4"
                            android:text="Terms of Service"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/text_size_18" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="@dimen/space_40"
                        android:background="@color/colorLightYellow">


                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorDarkGray"
                            android:text="@string/register"
                            android:id="@+id/register"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/text_size_16"
                            android:onClick="@{viewModel::onRegisterClick}"/>

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:visibility="invisible"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="@dimen/space_10"
                            android:indeterminate="true"
                            android:theme="@style/WhiteProgressBarStyle"/>


                    </RelativeLayout>

                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>






    </RelativeLayout>
</layout>
