<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <data>
        <variable
            name="viewModel"
            type="android.sdei.com.basicapp.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomLayout"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_15"
                android:layout_marginRight="@dimen/space_15"
                android:layout_marginTop="@dimen/space_40"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    app:errorText="@{viewModel.emailError}">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_2"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:text="@={viewModel.email}" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10"
                    android:hint="Password"
                    app:errorText="@{viewModel.passwordError}"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/space_10"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="@={viewModel.password}" />
                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/termsConditionsCheck"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Remember me"
                     android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.isRemember}" />
                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_20"
                    android:gravity="right"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_14" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_30"
                    android:background="@color/colorPrimaryDark">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:clickable="true"
                        android:focusable="true"
                        android:id="@+id/signIn"
                        android:onClick="@{viewModel::onLoginClick}"
                        android:text="@string/sign_in"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_16"/>
                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="@dimen/space_25"
                        android:layout_height="@dimen/space_25"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/space_10"
                        android:indeterminate="true"
                        android:visibility="invisible"
                        android:theme="@style/WhiteProgressBarStyle" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/space_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_15" />

        </LinearLayout>


    </RelativeLayout>
</layout>
